<resources>
    <string name="app_name">Android Technical Test</string>
    <string name="string_events">Next 5 events</string>
    <string name="string_SPANISH">Spanish La Liga</string>
    <string name="string_ITALIAN">Italian Serie A</string>
    <string name="string_ENGLISH">English Premier League</string>
    <string name="string_FRENCH">French Ligue 1</string>
    <string name="string_GERMAN">German Bundesliga</string>

</resources>