...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background0">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background1"
            android:gravity="center"
            android:paddingTop="@dimen/custom_spacing12dp"
            android:paddingBottom="@dimen/custom_spacing12dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingStart="@dimen/custom_spacing16dp"
            android:paddingTop="14dp"
            android:paddingEnd="@dimen/custom_spacing16dp"
...
