...
    android:layout_height="wrap_content"
    android:background="@drawable/row_background"
    app:cardCornerRadius="@dimen/custom_spacing15dp"
    app:cardElevation="@dimen/custom_spacing8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowTeamConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewStadium"
            android:layout_width="match_parent"
...
                android:text="@string/app_name"
                android:textColor="@color/white" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <ImageView
            android:id="@+id/imageViewTeamBadge"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
