<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_material"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    android:elevation="@dimen/custom_spacing8dp"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
    app:title="@string/app_name"
    app:titleTextColor="@android:color/white" />
